[project]
name = "quiz-common"
version = "0.1.0"
description = "Shared data models for quiz counterparts"
readme = "README.md"
authors = [
    { name = "Martin Zelený", email = "martin.zeleny@volny.cz" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
